log
Tue, Apr 15, 2025 12:49:52 PM: 
 hashmap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
eeef3b7
Tue, Apr 15, 2025  1:02:12 PM: 
 hashmap.c | 19 +++++++++++++------
 1 file changed, 13 insertions(+), 6 deletions(-)
 tests:  1|5
total_score: 10/70
2cbf2bf
Fri, Apr 18, 2025  8:56:34 PM: 
 hashmap.c | 30 +++++++++++++++++++++++++++++-
 1 file changed, 29 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
13da1cd
Fri, Apr 18, 2025  9:02:50 PM: 
 hashmap.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:111:33: error: 'HashMap {aka struct HashMap}' has no member named 'bucjets'; did you mean 'buckets'?
         Pair * pair_actual = map->bucjets[posicion_actual];
                                 ^~
725ce27
Fri, Apr 18, 2025  9:03:04 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:111:33: error: 'HashMap {aka struct HashMap}' has no member named 'bucjets'; did you mean 'buckets'?
         Pair * pair_actual = map->bucjets[posicion_actual];
                                 ^~
9e8214e
Fri, Apr 18, 2025  9:03:14 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
3fbb699
Fri, Apr 18, 2025  9:18:12 PM: 
 hashmap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  11|2
total_score: 50/70
8e2af96
Fri, Apr 18, 2025  9:26:05 PM: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'firstMap':
hashmap.c:134:55: error: 'Pair {aka struct Pair}' has no member named 'kwy'; did you mean 'key'?
         if (map->buckets[i] != NULL && map->buckets[i]->kwy != NULL)
                                                       ^~
72f46e8
Fri, Apr 18, 2025  9:26:15 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
63c19da
Fri, Apr 18, 2025  9:28:12 PM: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  16|1
total_score: 60/70
fb94abc
Fri, Apr 18, 2025  9:51:09 PM: 
 hashmap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
eb9d27a
